# hs-sr

./: cabal.project  flake.nix
sr/: default.nix  sr.cabal
sr/lib/: SR.hs
sr/lib/SR/: Test.hs
sr/test/: Main.hs
